# project_DRF

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml  tests_result.txt
config/: settings.py  urls.py
fixtures/: payment.json
materials/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_creator_lesson_creator.py  0003_payment.py  0004_subscription.py  0005_alter_subscription_course.py  0006_alter_subscription_unique_together.py  0007_alter_subscription_unique_together.py  0008_alter_course_creator_alter_lesson_creator_and_more.py  0009_payment_link_payment_session_id_alter_payment_amount.py  0010_payment_product_id.py  0011_alter_payment_user.py  0012_course_last_update_subscription_status.py  0013_lesson_last_update.py
users/: admin.py  models.py  permissions.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py  fill_payment.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_remove_payment_payment_by_card.py  0005_payment_payment_by_card.py  0006_delete_payment.py
